refactor(lexer): simplify token handling and improve windows compatibility
feat(parser): add lexer integration and error handling improvements
refactor(hpm): restructure package management and error handling
fix(hypc): improve windows compatibility and argument parsing
style: clean up code formatting and remove redundant includes

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -27,7 +27,7 @@ endif
 # Directories
 SRC_DIR = src
 INC_DIR = include
-BUILD_DIR = build
+BUILD_DIR = build_linux
 BIN_DIR = bin
 OBJ_DIR = $(BUILD_DIR)/obj
 
